welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:14: error: value lenght is not a member of Array[Int]
if (nums.lenght=1){
         ^